--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" id="theme-preference" href="/cdn/water.system.min.css">
         <link rel="stylesheet" href="/index.css">
 
-        <title>Static PWA</title>
+        <title>To-do:</title>
     </head>
     <body>
         <main id="app"></main>
