--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
         <meta name="theme-color" content="#202b38" media="(prefers-color-scheme: dark)">
 
+        <link rel="preload" href="/to-do/cdn/water.system.min.css" as="style">
+        <link rel="preload" href="/to-do/cdn/water.dark.min.css" as="style">
+        <link rel="preload" href="/to-do/cdn/water.light.min.css" as="style">
+
         <link rel="stylesheet" id="theme-preference" href="/to-do/cdn/water.system.min.css">
 
         <title>To-do:</title>
